--- a/styles/slick-theme.css
+++ b/styles/slick-theme.css
@@ -72,34 +72,65 @@
 
     opacity: .75;
     color: white;
-    
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
-.slick-prev{
-    left: -25px;
+.slick-prev
+{
+    left: -30px;
+   
 }
 [dir='rtl'] .slick-prev
 {
-    right: -25px;
+    right: 0px;
     left: auto;
+
 }
-.slick-prev:before{
-    content: '';
-    background-image: url('../images/arrow-left.png');
-    color: black;
-    width: 45px;
-    height: 45px;
+.slick-prev:before
+{
+    content: '←';
+    width: 32px;
+    height: 32px;
     display: inline-block;
-    z-index: 9999;
+    background-image: url(../images/arrow-left.png); 
+    border-radius: 50%;    
+    padding-right: 5px;
+    padding-bottom: 5px;
 }
-[dir='rtl'] .slick-prev:before{
+[dir='rtl'] .slick-prev:before
+{
     content: '→';
+    
 }
 
-
+.slick-next
+{
+    right: -30px;
+   
+}
+[dir='rtl'] .slick-next
+{
+    right: auto;
+    left: 0px;
+}
+.slick-next:before
+{
+    content: '→';
+    width: 32px;
+    height: 32px;
+    display: inline-block;
+    background-image: url(../images/arrow-right.png);
+    padding: 0;
+    border-radius: 50%;    
+    padding-right: 3px;
+    padding-bottom: 2px;
+}
+[dir='rtl'] .slick-next:before
+{
+    content: '←';
+}
 
 /* Dots */
 .slick-dotted.slick-slider
